# wildlife-vision

./: .gitignore  1.0-raa-eda.ipynb  2.0-raa-train-model.ipynb  README.md  pyproject.toml
notebooks/: 1.0-raa-eda.ipynb  2.0-raa-train-model.ipynb  3.0-raa-evaluation.ipynb
reports/notebooks_html/: 1.0-raa-eda.html  2.0-raa-train-model.html  3.0-evaluation.html  3.0-raa-evaluation.html
scripts/: export_pdf.bat
vision/: config.py  dataset.py  plots.py
vision/classifier/: train.py
vision/modelling/: model_zoo.py  train.py
